# EternalModLoaderCpp

./: .clang-format  .deepsource.toml  .gitattributes  .gitignore  .gitmodules  .travis.yml  AddChunks.cpp  AssetsInfo.cpp  AssetsInfo.hpp  BlangDecrypt.cpp  BlangParser.cpp  CMakeLists.txt  EternalModLoader.cpp  EternalModLoader.hpp  GetObject.cpp  LoadModFiles.cpp  LoadMods.cpp  LoadSoundMods.cpp  MapResourcesFile.cpp  Mod.cpp  ModifyPackageMapSpec.cpp  OnlineSafety.cpp  Oodle.cpp  Oodle.hpp  PackageMapSpec.cpp  PackageMapSpec.hpp  PathToRes.cpp  PathtoRes.cpp  README.md  ReadChunkInfo.cpp  ReadResourceFile.cpp  ReadSoundEntries.cpp  ReplaceChunks.cpp  ReplaceSounds.cpp  ResourceData.cpp  SetBufferSize.cpp  SetModDataForChunk.cpp  SoundMods.cpp  Utils.cpp  VectorUtils.cpp  (+1 more)
.github/workflows/: build.yml  cmake.yml  release.yml  test.yml
AssetsInfo/: AssetsInfo.cpp  AssetsInfo.hpp
BlangFile/: BlangFile.cpp  BlangFile.hpp
Colors/: Colors.cpp  Colors.hpp
MapResourcesFile/: MapResourcesFile.cpp  MapResourcesFile.hpp
MemoryMappedFile/: MemoryMappedFile.cpp  MemoryMappedFile.hpp
Mod/: Mod.cpp  Mod.hpp
OnlineSafety/: OnlineSafety.cpp  OnlineSafetySWF.hpp
Oodle/: Oodle.cpp  Oodle.hpp
PackageMapSpec/: PackageMapSpec.cpp  PackageMapSpec.hpp  PackageMapSpecInfo.cpp  PackageMapSpecInfo.hpp
ResourceData/: ResourceData.cpp  ResourceData.hpp
Utils/: Utils.cpp  Utils.hpp
include/: AddChunks.hpp  AssetsInfo.hpp  BlangDecrypt.hpp  BlangFile.hpp  BlangFileEntry.hpp  Colors.hpp  GetObject.hpp  LoadModFiles.hpp  LoadMods.hpp  MapResourcesFile.hpp  MemoryMappedFile.hpp  Mod.hpp  OnlineSafety.hpp  Oodle.hpp  PackageMapSpec.hpp  PackageMapSpecInfo.hpp  PathToResource.hpp  ProgramOptions.hpp  ReadChunkInfo.hpp  ReadResourceFile.hpp  ReadSoundEntries.hpp  ReplaceChunks.hpp  ReplaceSounds.hpp  ResourceContainer.hpp  ResourceData.hpp  SetModDataForChunk.hpp  SoundContainer.hpp  StreamDBContainer.hpp  Utils.hpp  WriteStreamDB.hpp
jsonxx/: LICENSE  jsonxx.cc  jsonxx.h
miniz/: miniz.c  miniz.h
src/: AddChunks.cpp  AssetsInfo.cpp  BlangDecrypt.cpp  BlangFile.cpp  EternalModLoader.cpp  GetObject.cpp  LoadModFiles.cpp  LoadMods.cpp  MapResourcesFile.cpp  MemoryMappedFile.cpp  Mod.cpp  OnlineSafety.cpp  Oodle.cpp  PackageMapSpec.cpp  PackageMapSpecInfo.cpp  PathToResource.cpp  ProgramOptions.cpp  ReadChunkInfo.cpp  ReadResourceFile.cpp  ReadSoundEntries.cpp  ReplaceChunks.cpp  ReplaceSounds.cpp  ResourceData.cpp  SetModDataForChunk.cpp  Utils.cpp  WriteStreamDB.cpp
